try fix view height on mobile

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,6 +5,7 @@
     flex-wrap: wrap;
     overflow: hidden;
     border-radius: 5px;
+    height: 100%;
 }
 
 
@@ -201,15 +202,14 @@
 
 /* mobile */
 
-@media only screen and (max-width:46.1875em) {
+@media only screen and (max-width:46.249em) {
     .users {
         display: none;
     }
     .chat-container {
-        width: 100vw;
-        height: 100vh;
-        min-height: -webkit-fill-available;
-        height: calc((--vh, 1vh)*100);
+        height: 100%;
+        /* min-height: -webkit-fill-available;
+        height: calc((--vh, 1vh)*100); */
     }
 }
 
@@ -218,8 +218,8 @@
 
 @media only screen and (min-width:46.25em) and (max-width:63.9375em) {
     .wrapper {
-        width: 100vw;
-        height: 80vh;
+        height: 80%;
+        width: 100%;
     }
     .users {
         width: 10%;
