--- a/src/styles.css
+++ b/src/styles.css
@@ -2,24 +2,21 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 * {
-  font-family: 'Josefin Sans', sans-serif !important;
-  /* letter-spacing: -0.5px; */
+    font-family: 'Josefin Sans', sans-serif !important;
+    /* letter-spacing: -0.5px; */
 }
 
 html {
-  overflow: hidden;
-  height: 100%;
+    overflow: hidden;
+    height: 100%;
 }
 
 body {
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color:#E6E5FC !important;
+    height: 100%;
+    background-color: #E6E5FC !important;
 }
 
 .btn {
-  padding: .5rem 2rem !important;
-  border-radius: 0.65rem !important;
+    padding: .5rem 2rem !important;
+    border-radius: 0.65rem !important;
 }
